test/files/neg/implicits.check
implicits.scala:38: error: type mismatch;
 found   : test2.HSome[java.lang.String,test2.HMap]
 required: Int
  foo(set)
      ^
implicits.scala:46: error: type mismatch;
 found   : List[Any]
 required: List[Mxml]
        children.toList.flatMap ( e => {
                                ^
two errors found
